--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     volumes:
         - ./src:/var/www
     working_dir: /var/www
+    ports:
+      - 5173:5173
   mysql:
     build:
       context: .
