--- a/docker/php/dockerfile
+++ b/docker/php/dockerfile
@@ -1,4 +1,9 @@
+FROM node:18.16.0 as node
 FROM php:8.2-fpm
+
+COPY --from=node /usr/local/bin /usr/local/bin
+COPY --from=node /usr/local/lib/node_modules/npm /usr/local/lib/node_modules/npm
+
 COPY ./docker/php/php.ini /usr/local/etc/php/
 
 RUN apt-get update \
